--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@types/jsonwebtoken": "^9.0.2",
         "@types/module-alias": "^2.0.2",
         "@types/morgan": "^1.9.5",
+        "@types/multer": "^1.4.7",
         "@types/node": "^20.5.9",
         "@types/uuid": "^9.0.3",
         "@typescript-eslint/eslint-plugin": "^6.6.0",
@@ -36,11 +37,13 @@
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "firebase-admin": "^11.10.1",
         "helmet": "^7.0.0",
         "jsonwebtoken": "^9.0.2",
         "module-alias": "^2.2.3",
         "mongoose": "^7.5.0",
         "morgan": "^1.10.0",
+        "multer": "^1.4.5-lts.1",
         "uuid": "^9.0.0",
         "zod": "^3.22.2"
     },
